CSS Color contrast fixes

--- a/frontend/src/components/form/InlayInputBox.css
+++ b/frontend/src/components/form/InlayInputBox.css
@@ -17,7 +17,7 @@
 }
 
 .inlayInput span {
-  color: gray;
+  color: #676767;
   font-size: 0.67rem;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
